Update project name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hello-react",
+  "name": "react-weather",
   "version": "1.0.0",
-  "description": "Simple react app",
+  "description": "Weather react app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
